# agent-redteam

./: .gitignore  CONTRIBUTING.md  HANDOFF.md  README.md  README_CN.md  RELEASE_CHECKLIST.md  SECURITY.md  action.yml  config.example  mkdocs.yml  pyproject.toml
.claude/: launch.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  sample_or_check.yml
.github/workflows/: ci.yml  docs.yml  example-scan.yml
docs/: api.md  article-multimodal-wechat.md  article-multimodal-zhihu-juejin.md  article-wechat.md  article-x-thread.md  article-zhihu-juejin.md  benchmark.md  cli.md  contributing.md  github-action.md  index.md  paper-multimodal-injection-cn.md  paper-multimodal-injection.md  quickstart.md  suites.md  targets.md  taxonomy.md
src/agent_redteam/: CODEX_IMPLEMENTATION_REPORT.md  __init__.py  adaptive.py  attest.py  benchmark.py  catalog.py  ci_policy.py  cli.py  evidence.py  html_report.py  mutate.py  onboarding.py  policy_lint.py  project_audit.py  regression.py  release_gate.py  release_manifest.py  review.py  sample_audit.py  sbom.py  scan_plan.py  sdk.py  taxonomy.py  tui.py  waivers.py
src/agent_redteam/checks/: __init__.py  base.py  data_poisoning.py  decision.py  encoded.py  insecure_output_check.py  leak.py  multiturn_check.py  over_refusal_check.py  refusal.py  structured_decision.py  vector_access.py
src/agent_redteam/core/: __init__.py  checkpoint.py  config.py  engine.py  harness.py  multiturn.py  result.py  storage.py
src/agent_redteam/dashboard/: __init__.py  api.py  server.py  settings_api.py
src/agent_redteam/profiles/: __init__.py  standard.json
tests/: test_adaptive.py  test_benchmark.py  test_check_regressions.py  test_checkpoint.py  test_cli.py  test_core.py  test_dashboard.py  test_maturity_commands.py  test_multimodal.py  test_multiturn.py  test_mutate.py  test_retry.py  test_sample_audit.py  test_scan_plan.py  test_sdk.py  test_targets.py
validation/: MULTI-MODEL-REPORT.md  MULTITURN-REPORT.md  MUTATION-REPORT.md  OLLAMA-BENCHMARK.md  REPORT.md  adaptive-glm-5.2.json  failures-analysis.txt  findings-final.txt  full-300-final.json  full-300-v2.json  full-300.json  glm-4-flash-300.json  glm-4.5-300.json  multimodal-glm-5.2.json  multimodal-qwen2.5-0.5b.json  multiturn-glm-5.2-batch1.json  multiturn-llama3.2-1b.json  multiturn-qwen2.5-0.5b.json  mutation-results.json  ollama-llama3.2-1b.json  ollama-qwen2.5-0.5b.json  summary-final.txt
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  theme.ts  types.ts
(+168 files in other folders)
