[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-redteam"
version = "0.3.0"
description = "AI Agent 红队安全测试平台 — 从 CLI 到 Dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "uninhibited-scholar"}]
keywords = ["red-team", "agent-security", "prompt-injection", "llm-security", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.40.0"]
dev = ["pytest>=7.0", "pytest-cov"]
ssl = ["certifi"]

[project.scripts]
agent-redteam = "agent_redteam.cli:main"

[project.urls]
Homepage = "https://github.com/uninhibited-scholar/agent-redteam"
Documentation = "https://github.com/uninhibited-scholar/agent-redteam#readme"
"Bug Tracker" = "https://github.com/uninhibited-scholar/agent-redteam/issues"
Changelog = "https://github.com/uninhibited-scholar/agent-redteam/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_redteam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
